RDNA4 `pp_od_clk_voltage` doesn't reflect current SCLK offset
Brief summary of the problem:
Changing the max SCLK offset on RDNA4 doesn't reflect in pp_od_clk_voltage
. Moreover, it seems that the value there is always erroneous as it reports [1] 1000MHz
instead of the default of 0MHz
for this offset. I don't see any errors in dmesg related to this.
With RDNA4, we can only change the max clock offset, so maybe it would be better to hide [0]
altogether or show the max SCLK offset as [0]
? If that's possible of course.
Hardware description:
- CPU: Ryzen 7 5800X3D
- GPU: RX 9070 XT Hellhound
- System Memory: 64 GiB
System information:
- Distro name and Version: Arch Linux
- Kernel version: 6.13.6
- Custom kernel: N/A
- AMD official driver version: Mesa 25.0 + RADV 25.0
How to reproduce the issue:
cat /sys/class/drm/card1/device/pp_od_clk_voltage
sudo tee /sys/class/drm/card1/device/pp_od_clk_voltage <<<"s 1 100"
sudo tee /sys/class/drm/card1/device/pp_od_clk_voltage <<<"c"
cat /sys/class/drm/card1/device/pp_od_clk_voltage